# kai

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  EVALUATION.md  SEARCH.md
lichess-bot/: .env.example  Dockerfile  README.md  config.yml.example  deploy-vps.sh  docker-compose.yml  kai-bot.service  run.sh  setup.sh
src/: bitboard.rs  eval.rs  lib.rs  magic.rs  main.rs  make_move.rs  movegen.rs  moves.rs  ordering.rs  perft.rs  position.rs  qsearch.rs  search.rs  see.rs  tt.rs  types.rs  uci.rs  xboard.rs  zobrist.rs
